<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_trades"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="70dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cse403.finderskeepers.ViewTradesActivity"
    tools:showIn="@layout/activity_view_trades">

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/incoming_trades_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:textColor="@color/bootstrap_brand_secondary_text"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="center"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/incoming_trades_view"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/incoming_trades_list">
        </LinearLayout>
    </HorizontalScrollView>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/outgoing_trades_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:textColor="@color/bootstrap_brand_secondary_text"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:gravity="center"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/outgoing_trades_view"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/outgoing_trades_list">
        </LinearLayout>
    </HorizontalScrollView>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/completed_trades_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:textColor="@color/bootstrap_brand_secondary_text"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/completed_trades_view"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/completed_trades_list">
        </LinearLayout>
    </HorizontalScrollView>

    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:text="@string/rejected_trades_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30sp"
        android:textColor="@color/bootstrap_brand_secondary_text"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rejected_trades_view"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/rejected_trades_list">
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
