<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
    tools:context="cse403.finderskeepers.SignInActivity"
    tools:showIn="@layout/activity_sign_in">

    <com.google.android.gms.common.SignInButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:text=""
...
