<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_user_trade"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="70dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
...
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/view_other_text"
        android:id="@+id/view_profile"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:background="#AAAAAA"/>

</LinearLayout>

